# gengine

./: .clang-format  .gitignore  .gitmodules  B4PUSH  CMakeLists.txt  CMakePresets.json  CODING.md  DEV_PLAN.txt  DOCKER_WORKFLOW.txt  README.md  build.sh  build.wasm.sh  compile_commands.json  gengine.data  gengine.html  gengine.js  imgui.ini  install_vcpkg.sh  package-lock.json  package.json  script.lua  setup.sh
.github/workflows/: master.yml  vitepress.yml
code/: assets.cpp  assets.h  common.h  gpu.h  gpu.opengl.cpp  gpu.vulkan.cpp  physics.h  utils.hpp  vulkan-headers.hpp  window.h  world.h  world.native.cpp  world.wasm.cpp
core/: CMakeLists.txt  assets.cpp  assets.h  common.h  config.h  core.cpp  core.h  fps_controller.cpp  fps_controller.h  kernel.cpp  main.cpp  physics.cpp  physics.h  scene.cpp  scene.gltf.hpp  scene.h  world.h
core/ffi/: js.desktop.cpp  js.web.cpp
core/stb/: stb_image.cpp
cpp/: assets.cpp  assets.h  camera.hpp  main.cpp  world.h  world.native.cpp  world.wasm.cpp
cpp/renderer/: render-device-vk.cpp  renderer-opengl.cpp  renderer.h
data/: compile.bat  compile.sh  cool.frag.glsl  cool.vert.glsl  cube.frag.glsl  cube.frag.spv  cube.vert.glsl  cube.vert.spv  gl.frag.glsl  map.mtl  rectangle.lua  skjar-isles.mtl  sphere.glb  spinny.mtl  spirv.sh  vk.frag.gles.glsl  vk.frag.glsl  vk.vert.gles.glsl  vk.vert.glsl  vk.vert.spv
data/opengl/: basic.frag.glsl  basic.vert.glsl
data/shaders/: rectangle.frag.glsl  rectangle.frag.glsles  rectangle.frag.json  rectangle.frag.spv  rectangle.vert.glsl  rectangle.vert.glsles  rectangle.vert.json  rectangle.vert.spv  rectangle_.json
dependencies/vcpkg-ports/: README.md
dependencies/vcpkg-ports/assimp/: build_fixes.patch  portfile.cmake
dependencies/vcpkg-ports/assimp-og/: build_fixes.mine.patch
devops/: .gitignore
devops/config/cmake/: CMakeLists.txt
devops/config/vcpkg/ports/assimp/: portfile.cmake
devops/scripts/: build.sh  common.sh  setup.sh
docker/: Dockerfile  compose.yaml  packages.txt
docs/: build.md  core.md  examples.md  gpu.md  index.md  package.json  setup.md
docs/.vitepress/: config.mts
examples/: CMakeLists.txt  javascript.cpp  javascript.js  native.cpp  world.gltf.cpp  world.native.cpp  world.shaders.cpp  world.wasm.cpp
examples/cmake/: emscripten.cmake
gpu/: CMakeLists.txt  build.sh  gpu.h  gpu.opengl.cpp  gpu.vulkan.cpp
gpu/include/: gpu.h  shaders.h
gpu/src/: gpu-lua.cpp  gpu.opengl.cpp  gpu.vulkan.cpp  shaders.cpp  shadertools.cpp  utils.hpp
hotfix-vitepress/: Makefile  cmake_install.cmake
hotfix-vitepress/javascript/: index.html
master/: cmake_install.cmake
master/javascript/: index.html  index.js
master/native/: index.html  index.js
master/world.wasm/: index.js  index.wasm
node/: CMakeLists.txt  README.md  build.sh  index.js  index.ts  main.cpp  package.json
source/artifacts/linux-vk-dev/: CMakeCache.txt
source/core/: CMakeLists.txt  assets.h  camera.hpp  core.h  kernel.cpp  kernel.h  main.cpp  physics.h  scene.cpp
source/core/cmake/: core-config.cmake.in
source/core/ffi/: js.desktop.cpp
source/examples/: CMakeLists.txt  javascript.js  native.cpp
source/examples/cmake/: emscripten.cmake
source/gpu/: .gitignore
source/gpu/cmake/: gpu-config.cmake.in
source/gpu/src/: gpu.opengl.cpp
source/node/: build.sh  package-lock.json
src/: arrow_table.h  assets.cpp  assets.h  camera.hpp  glad.cpp  glad.h  main.cpp  module.cpp  module.h  physics.cpp  physics.h  window.h  world.native.cpp  world.wasm.cpp
src/renderer/: render-device-vk.cpp  renderer-opengl.cpp  renderer.cpp  renderer.h  utils.hpp
ts-cpp/world.native/: index.js
typescript/: CMakeLists.txt  README.md  main.cpp  script.js
v8/javascript/: index.js
vscode/: Makefile
web/: index.html
website/: package-lock.json  setup.md
website/.vitepress/: config.mts
worlds/world.native/: index.html  index.js
